# libphysics

./: .gitignore  README.md  libsympy.py  pyproject.toml  pyrightconfig.json  requirements.txt
examples/: _1_classical_mechanics_baumann.py  _1_classical_mechanics_baumann_notebook.ipynb  mechanics_examples.py  mechanics_examples_notebook.ipynb
examples/mechanics/: baumann_classical_mechanics.ipynb  baumann_classical_mechanics.py  mechanics_examples.py  mechanics_examples_notebook.ipynb
libphysics/: __init__.py  acoustics.py  astrophysics.py  biophysics.py  condensed.py  electromagnetic.py  libnotebook.py  libphyscon.py  libreflection.py  libsympy.py  libtorch.py  mechanics.py  methods.py  nuclear_physics.py  optics.py  photonics.py  quantum_mechanics.py  quantum_optics.py  statistical_physics.py  template.py
libphysics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scratch/: check_types.py  debug_pt.py  narrow_down.py  test_ket_div.py  test_ket_op_pow.py  test_op_pow.py  test_op_pow_sym.py  test_pt_class.py  test_pt_hbar.py  test_pt_order1.py  verify_oqopt.py
src/: acoustics.py  astrophysics.py  biophysics.py  condensed.py  electromagnetic.py  libnotebook.py  libphyscon.py  libreflection.py  libsympy.py  libtorch.py  mechanics.py  methods.py  nuclear_physics.py  optics.py  photonics.py  quantum_mechanics.py  quantum_optics.py  statistical_physics.py  template.py
tests/: test_libsympy.py  test_libtorch.ipynb  test_mechanics.ipynb  test_mechanics.py  test_methods.ipynb  test_methods.py  test_nuclear_physics.ipynb  test_nuclear_physics.py  test_optics.ipynb  test_optics.py  test_optics_addons.py  test_quantum_mechanics.ipynb  test_quantum_mechanics.py  test_statistical_physics.ipynb  test_statistical_physics.py  test_template.py
(+6 files in other folders)
